<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="136dp">

    <TextView
        android:id="@+id/tv_employee_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tv_employee_team"
        android:textColor="#444"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_team_label"
        app:layout_constraintStart_toEndOf="@+id/tv_team_label" />

    <TextView
        android:id="@+id/tv_team_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_team_label"
        android:textColor="#444"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_employee_phone"
        app:layout_constraintTop_toBottomOf="@+id/tv_employee_phone" />

    <ImageView
        android:id="@+id/iv_employee"
        android:layout_width="124dp"
        android:layout_height="124dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/iv_employee"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/tv_employee_name"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="serif"
        android:maxLines="2"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iv_employee"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/tv_employee_name" />

    <TextView
        android:id="@+id/tv_employee_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:maxLines="1"
        android:textColor="#444"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_employee_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_employee_name"
        tools:text="@string/tv_employee_email" />

    <TextView
        android:id="@+id/tv_employee_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_employee_phone"
        android:textColor="#444"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_employee_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_employee_email" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#d3d3d3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></View>

</android.support.constraint.ConstraintLayout>
